--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,5 +6,6 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="GotKeyCemetary",DevComment="")
 +GameplayTagList=(Tag="GotKeyEntrance",DevComment="")
 
