delete kraken & blending ground & rain FX & add sword & cloth

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,4 +8,5 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GotKeyCemetary",DevComment="")
 +GameplayTagList=(Tag="GotKeyEntrance",DevComment="")
++GameplayTagList=(Tag="GotKeyPlace",DevComment="")
 
