Add checkpoint + Add death menu + Add BP in corridor proc gen + Add recovery after ragdoll

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
 GlobalDefaultGameMode=/Game/Blueprints/DivineJourney_GameMode.DivineJourney_GameMode_C
 EditorStartupMap=/Game/Maps/Town.Town
+GameInstanceClass=/Game/Blueprints/SkyfallGameInstance_BP.SkyfallGameInstance_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
