--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,6 +6,13 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Checkpoints",DevComment="")
++GameplayTagList=(Tag="Checkpoints.CatacombArena",DevComment="")
++GameplayTagList=(Tag="Checkpoints.CatacombEntry",DevComment="")
++GameplayTagList=(Tag="Checkpoints.Cemetary",DevComment="")
++GameplayTagList=(Tag="Checkpoints.ChurchPlace",DevComment="")
++GameplayTagList=(Tag="Checkpoints.FirstArena",DevComment="")
++GameplayTagList=(Tag="Checkpoints.LevelStart",DevComment="")
 +GameplayTagList=(Tag="GotKeyCemetary",DevComment="")
 +GameplayTagList=(Tag="GotKeyEntrance",DevComment="")
 +GameplayTagList=(Tag="GotKeyPlace",DevComment="")
