--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -16,4 +16,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GotKeyCemetary",DevComment="")
 +GameplayTagList=(Tag="GotKeyEntrance",DevComment="")
 +GameplayTagList=(Tag="GotKeyPlace",DevComment="")
++GameplayTagList=(Tag="KilledFirstArena",DevComment="")
 
