--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -17,4 +17,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GotKeyEntrance",DevComment="")
 +GameplayTagList=(Tag="GotKeyPlace",DevComment="")
 +GameplayTagList=(Tag="KilledFirstArena",DevComment="")
++GameplayTagList=(Tag="MeteorCinePlayed",DevComment="")
 
