--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
+GameDefaultMap=/Game/Maps/Town.Town
 GlobalDefaultGameMode=/Game/Blueprints/DivineJourney_GameMode.DivineJourney_GameMode_C
 EditorStartupMap=/Game/Maps/Town.Town
 GameInstanceClass=/Game/Blueprints/SkyfallGameInstance_BP.SkyfallGameInstance_BP_C
