--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -16,6 +16,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GotKeyCemetary",DevComment="")
 +GameplayTagList=(Tag="GotKeyEntrance",DevComment="")
 +GameplayTagList=(Tag="GotKeyPlace",DevComment="")
++GameplayTagList=(Tag="KilledCatacomb",DevComment="")
++GameplayTagList=(Tag="KilledCemetary",DevComment="")
 +GameplayTagList=(Tag="KilledFirstArena",DevComment="")
 +GameplayTagList=(Tag="MeteorCinePlayed",DevComment="")
 
