Lot's of stuffs

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -89,6 +89,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Dodge",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadZero)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Right)
 +AxisMappings=(AxisName="LookLeft/Right",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="LookUp/Down",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveRight/Left",Scale=1.000000,Key=D)
